--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,19 @@ body {
    width: 100vw;
    height: 100vh;
 }
+
+#info_text {
+
+  color: black;
+  background-color: white;
+  border-radius: 15px;
+  padding: 15px;
+ width: 300px;
+ height: 50px;
+
+
+
+
+
+
+}
